finish code base and make functional.

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ body {
   border-radius: 4px;
   border: 2px solid #fff;
   color: #fff;
-  background-color: #f2a900;
+  background-color: #000000;
   padding: 15px 0;
   transition: .5s ;
 }
